Large restructuring to fix submodule nesting issue + better C++ auto_timer tags
- Python > 3.1 now allows: "from timemory.util import rss_usage"
- requires importlib.util
- not available in older versions
- Included tests in installation --> timemory.tests.run()

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 /TiMemory.*
 /timemory.*
 __pycache__
+*.pyc
 
 # miscellaneous
 timing_report*
@@ -27,3 +28,7 @@ timing_report*
 /TiMemory-*
 /dist
 /.eggs
+
+# info files
+/timemory/mpi_support/*.txt
+
