Possible PyPi 1.1.8 -- Squashed bugs + I/O and test improvements
- Fixed installation issue with `python setup.py build install`
- Excluded non-displayed timers (i.e. falling below minimum) from setting the output width
- Improved MPI detection
- (Hopefully) fixed AppVeyor and Travis

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -52,5 +52,4 @@ install:
 build_script:
 - ls
 - python ./setup.py build install
-- python ./tests/simple_test.py
-#- if ($env:PLATFORM -eq "x64") { python ./tests/nested_test.py }
+- python -c "import timemory ; timemory.tests.run()"
