--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,236 @@ matrix:
   include:
     # ------------------------------------------------------------------------ #
     #
+    #   Python PyPy
+    #
+    # ------------------------------------------------------------------------ #
+    # GCC 4.9
+    - os: linux
+      dist: trusty
+      sudo: false
+      python: 'pypy'
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - gcc-4.9
+            - g++-4.9
+            - build-essential
+            - cmake
+            - libopenmpi-dev
+            - openmpi-bin
+      env:
+        - MATRIX_EVAL="CC=$(which gcc-4.9) && CXX=$(which g++-4.9)"
+    # GCC 5
+    - os: linux
+      dist: trusty
+      sudo: false
+      python: 'pypy'
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - gcc-5
+            - g++-5
+            - build-essential
+            - cmake
+            - libopenmpi-dev
+            - openmpi-bin
+      env:
+        - MATRIX_EVAL="CC=$(which gcc-5) && CXX=$(which g++-5)"
+    # GCC 6
+    - os: linux
+      dist: trusty
+      sudo: false
+      python: 'pypy'
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - gcc-6
+            - g++-6
+            - build-essential
+            - cmake
+            - libopenmpi-dev
+            - openmpi-bin
+      env:
+        - MATRIX_EVAL="CC=$(which gcc-6) && CXX=$(which g++-6)"
+    # GCC 7
+    - os: linux
+      dist: trusty
+      sudo: false
+      python: 'pypy'
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - gcc-7
+            - g++-7
+            - build-essential
+            - cmake
+            - libopenmpi-dev
+            - openmpi-bin
+      env:
+        - MATRIX_EVAL="CC=$(which gcc-7) && CXX=$(which g++-7)"
+    # Clang 4.0
+    - os: linux
+      dist: trusty
+      sudo: false
+      python: 'pypy'
+      addons:
+        apt:
+          sources:
+            - llvm-toolchain-trusty-4.0
+            - ubuntu-toolchain-r-test
+          packages:
+            - clang-4.0
+            - clang++-4.0
+            - build-essential
+            - cmake
+            - libopenmpi-dev
+            - openmpi-bin
+      env:
+        - MATRIX_EVAL="CC=$(which clang-4.0) && CXX=$(which clang++-4.0)"
+    # Clang 5.0
+    - os: linux
+      dist: trusty
+      sudo: false
+      python: 'pypy'
+      addons:
+        apt:
+          sources:
+            - llvm-toolchain-trusty-5.0
+            - ubuntu-toolchain-r-test
+          packages:
+            - clang-5.0
+            - clang++-5.0
+            - build-essential
+            - cmake
+            - libopenmpi-dev
+            - openmpi-bin
+      env:
+        - MATRIX_EVAL="CC=$(which clang-5.0) && CXX=$(which clang++-5.0)"
+    # ------------------------------------------------------------------------ #
+    #
+    #   Python PyPy3
+    #
+    # ------------------------------------------------------------------------ #
+    # GCC 4.9
+    - os: linux
+      dist: trusty
+      sudo: false
+      python: 'pypy3'
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - gcc-4.9
+            - g++-4.9
+            - build-essential
+            - cmake
+            - libmpich-dev
+            - mpich
+      env:
+        - MATRIX_EVAL="CC=$(which gcc-4.9) && CXX=$(which g++-4.9)"
+    # GCC 5
+    - os: linux
+      dist: trusty
+      sudo: false
+      python: 'pypy3'
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - gcc-5
+            - g++-5
+            - build-essential
+            - cmake
+            - libmpich-dev
+            - mpich
+      env:
+        - MATRIX_EVAL="CC=$(which gcc-5) && CXX=$(which g++-5)"
+    # GCC 6
+    - os: linux
+      dist: trusty
+      sudo: false
+      python: 'pypy3'
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - gcc-6
+            - g++-6
+            - build-essential
+            - cmake
+            - libmpich-dev
+            - mpich
+      env:
+        - MATRIX_EVAL="CC=$(which gcc-6) && CXX=$(which g++-6)"
+    # GCC 7
+    - os: linux
+      dist: trusty
+      sudo: false
+      python: 'pypy3'
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - gcc-7
+            - g++-7
+            - build-essential
+            - cmake
+            - libmpich-dev
+            - mpich
+      env:
+        - MATRIX_EVAL="CC=$(which gcc-7) && CXX=$(which g++-7)"
+    # Clang 4.0
+    - os: linux
+      dist: trusty
+      sudo: false
+      python: 'pypy3'
+      addons:
+        apt:
+          sources:
+            - llvm-toolchain-trusty-4.0
+            - ubuntu-toolchain-r-test
+          packages:
+            - clang-4.0
+            - clang++-4.0
+            - build-essential
+            - cmake
+            - libmpich-dev
+            - mpich
+      env:
+        - MATRIX_EVAL="CC=$(which clang-4.0) && CXX=$(which clang++-4.0)"
+    # Clang 5.0
+    - os: linux
+      dist: trusty
+      sudo: false
+      python: 'pypy3'
+      addons:
+        apt:
+          sources:
+            - llvm-toolchain-trusty-5.0
+            - ubuntu-toolchain-r-test
+          packages:
+            - clang-5.0
+            - clang++-5.0
+            - build-essential
+            - cmake
+            - libmpich-dev
+            - mpich
+      env:
+        - MATRIX_EVAL="CC=$(which clang-5.0) && CXX=$(which clang++-5.0)"
+    # ------------------------------------------------------------------------ #
+    #
     #   Python 2.7
     #
     # ------------------------------------------------------------------------ #
@@ -522,9 +752,9 @@ script:
     #
     # Python testing
     #
-    - cd ${SOURCE_DIR}
-    - python${TRAVIS_PYTHON_VERSION} setup.py install test
-    - echo "python${TRAVIS_PYTHON_VERSION} setup.py build install test -- Done"
+    - mkdir -p ${HOME}/timemory-test
+    # go to empty directory for testing
+    - cd ${HOME}/timemory-test
     - python${TRAVIS_PYTHON_VERSION} -c "import timemory ; timemory.tests.run()"
     - echo "python${TRAVIS_PYTHON_VERSION} testing -- Done"
     #
