--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -58,7 +58,17 @@ install:
     pip install -U setuptools disttools
 
 build_script:
+#- mkdir build-timemory
+#- cd build-timemory
+#- cmake -DCMAKE_SUPPRESS_REGENERATION=1 -DCTEST_LOCAL_CHECKOUT=ON -DCTEST_SITE=AppVeyor
+#    -DCTEST_MODEL=Continuous .. -G "%CMAKE_GENERATOR%" -A "%CMAKE_ARCH%"
+#- set MSBuildLogger="C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
+#- cmake --build . --config %CONFIG% --target ALL_BUILD -- /m /v:m /logger:%MSBuildLogger%
+#- cmake --build . --config %CONFIG% --target INSTALL -- /m /v:m /logger:%MSBuildLogger%
+#- ctest -S cdash/Stages.cmake -DSTAGES="Build;Test" -DTRIGGER=Test -V --output-on-failure
+#- cd ..
 - ls
 - pip install .
 - cd ..
 - python -c "import timemory ; timemory.tests.run()"
+
