--- a/.travis.yml
+++ b/.travis.yml
@@ -506,7 +506,8 @@ install:
     - echo "--> ${PWD}"
     - cmake -DCMAKE_INSTALL_PREFIX=${INSTALL_DIR} -DUSE_MPI=ON
         -DCMAKE_BUILD_TYPE=Release -DPYTHON_EXECUTABLE=$(which python)
-        -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} ${PWD}/..
+        -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX}
+        -DBUILD_TESTING=ON -DCTEST_SITE=travis -DCTEST_MODEL=Continous ${PWD}/..
     - grep '^[A-Za-z]' CMakeCache.txt | grep -vi advanced
     - make -j2
     - make install -j2
@@ -531,6 +532,5 @@ script:
     # C++ testing
     #
     - cd ${BUILD_DIR}
-    - ./test_timing
-    - mpirun -np 2 ./mpi_test_timing
+    - ctest -S cdash/Stages.cmake -DSTAGES="Build;Test" -DTRIGGER=Test -V --output-on-failure
     - echo "C++ testing -- Done"
