CDash info improvement for detached

--- a/cmake/Templates/cdash/Init.cmake.in
+++ b/cmake/Templates/cdash/Init.cmake.in
@@ -108,7 +108,7 @@ set(CTEST_COMPILER_IS_CLANG     "@CMAKE_CXX_COMPILER_IS_CLANG@")
 set(CTEST_COMPILER_IS_INTEL     "@CMAKE_CXX_COMPILER_IS_INTEL@")
 
 if(NOT "${CTEST_LOCAL_DIRECTORY}" STREQUAL "")
-    set(CTEST_CHECKOUT_COMMAND      "rsync -ruv --exclude ${CTEST_LOCAL_DIRECTORY}/build-@PROJECT_NAME@ --exclude build-@PROJECT_NAME@ ${CTEST_LOCAL_DIRECTORY}/ ${CTEST_SOURCE_DIRECTORY}")
+    set(CTEST_CHECKOUT_COMMAND      "rsync -ruv --exclude ${CTEST_LOCAL_DIRECTORY}/build-@PROJECT_NAME@ --exclude build-@PROJECT_NAME@ --exclude build-timemory --exclude ${CTEST_LOCAL_DIRECTORY}/build-timemory ${CTEST_LOCAL_DIRECTORY}/ ${CTEST_SOURCE_DIRECTORY}")
 else(NOT "${CTEST_LOCAL_DIRECTORY}" STREQUAL "")
     set(CTEST_CHECKOUT_COMMAND      "${CTEST_GIT_COMMAND} clone -b ${CTEST_BRANCH} --recurse-submodules https://github.com/jrmadsen/@PROJECT_NAME@ ${CTEST_SOURCE_DIRECTORY}")
 endif(NOT "${CTEST_LOCAL_DIRECTORY}" STREQUAL "")
