--- a/cmake/Templates/cdash/Init.cmake.in
+++ b/cmake/Templates/cdash/Init.cmake.in
@@ -155,7 +155,7 @@ set(ENV{LC_MESSAGES}      "en_EN" )
 # set environment paths
 set(ENV{PROJECT_BIN_PATH}   "${CTEST_INSTALL_DIRECTORY}/@CMAKE_INSTALL_BINDIR@")
 set(ENV{PROJECT_LIB_PATH}   "${CTEST_INSTALL_DIRECTORY}/@CMAKE_INSTALL_LIBDIR@")
-set(ENV{PROJECT_PYC_PATH}   "${CTEST_INSTALL_DIRECTORY}/@CMAKE_INSTALL_PYTHONDIR@")
+set(ENV{PROJECT_PYC_PATH}   "${CTEST_INSTALL_DIRECTORY}/@TIMEMORY_INSTALL_PYTHONDIR@")
 
 
 # ---------------------------------------------------------------------------- #
