--- a/cmake/Templates/cdash/Init.cmake.in
+++ b/cmake/Templates/cdash/Init.cmake.in
@@ -18,6 +18,7 @@ set(CTEST_DASHBOARD_ROOT    "@CMAKE_DASHBOARD_ROOT@")
 set(CTEST_BRANCH            "@CMAKE_SOURCE_BRANCH@")
 set(CTEST_LOCAL_DIRECTORY   "@CMAKE_LOCAL_DIRECTORY@")
 set(CTEST_GENERATOR         "@CMAKE_GENERATOR@")
+set(MPI_FOUND               "@MPI_FOUND@")
 if(NOT DEFINED CTEST_MODEL)
     set(CTEST_MODEL         "@CTEST_MODEL@")
 endif(NOT DEFINED CTEST_MODEL)
@@ -97,7 +98,10 @@ endif("${NPROCS}" GREATER 16)
 
 # ---------------------------------------------------------------------------- #
 
-set(CTEST_BUILD_NAME            "[${CTEST_BRANCH}] [${OS_NAME} ${HW_NAME}] [${CTEST_COMPILER} ${CTEST_COMPILER_VERSION}] [@CMAKE_BUILD_TYPE@] [Python @PYBIND11_PYTHON_VERSION@] [C++@CMAKE_CXX_STANDARD@]")
+set(CTEST_BUILD_NAME            "[${CTEST_BRANCH}][${OS_NAME} ${HW_NAME}][${CTEST_COMPILER} ${CTEST_COMPILER_VERSION}][@CMAKE_BUILD_TYPE@][Python @PYBIND11_PYTHON_VERSION@][C++@CMAKE_CXX_STANDARD@]")
+if(MPI_FOUND)
+    set(CTEST_BUILD_NAME "${CTEST_BUILD_NAME}[MPI]")
+endif(MPI_FOUND)
 set(CTEST_SOURCE_DIRECTORY      "${CTEST_DASHBOARD_ROOT}/source-@PROJECT_NAME@")
 set(CTEST_BINARY_DIRECTORY      "${CTEST_DASHBOARD_ROOT}/build-@PROJECT_NAME@")
 set(CTEST_INSTALL_DIRECTORY     "${CTEST_DASHBOARD_ROOT}/install-@PROJECT_NAME@")
