--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -55,6 +55,7 @@ install:
       $env:PYTHONHOME = "C:\Miniconda$env:CONDA"
       conda update -y -q -n base conda
       conda install -y -q pip
+      python -m pip install -U pip
     }
     pip install -U setuptools disttools
 
