--- a/cmake/Templates/cdash/Init.cmake.in
+++ b/cmake/Templates/cdash/Init.cmake.in
@@ -119,7 +119,11 @@ endif(NOT "${CTEST_LOCAL_DIRECTORY}" STREQUAL "")
 set(CTEST_UPDATE_COMMAND        "${CTEST_GIT_COMMAND} pull")
 set(CTEST_CONFIGURATION_TYPE    "@CMAKE_BUILD_TYPE@")
 set(CTEST_CONFIGURE_COMMAND     "${CTEST_CMAKE_COMMAND} ${CTEST_CONFIG_OPTIONS} -DBUILD_TESTING=ON -DDASHBOARD_MODE=ON -DCMAKE_INSTALL_PREFIX=${CTEST_INSTALL_DIRECTORY} -Wno-dev ${CTEST_SOURCE_DIRECTORY} -G ${CTEST_CMAKE_GENERATOR}")
-set(CTEST_BUILD_COMMAND         "${CTEST_MAKE_COMMAND} install ${OPTION_BUILD}")
+if(WIN32)
+    set(CTEST_BUILD_COMMAND     "${CTEST_CMAKE_COMMAND} --build ${CTEST_BINARY_DIRECTORY} --config @CMAKE_BUILD_TYPE@ --target INSTALL")
+else(WIN32)
+    set(CTEST_BUILD_COMMAND     "${CTEST_MAKE_COMMAND} install ${OPTION_BUILD}")
+endif(WIN32)
 if(CTEST_COMPILER_IS_GNU)
     set(CTEST_COVERAGE_COMMAND ${CTEST_GNU_COV_COMMAND})
 elseif(CTEST_COMPILER_IS_CLANG)
